# sqlalchemy-spy

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: codeflash.yaml
examples/: basic.py  decorator.py  fastapi_app.py  n_plus_one.py  orm_relationships.py
src/sqlalchemy_profiler/: __init__.py  profiler.py
src/sqlalchemy_profiler/renderers/: __init__.py  base.py  console.py  html.py  json.py
src/sqlalchemy_spy/: __init__.py  profiler.py
src/sqlalchemy_spy/renderers/: __init__.py  base.py  console.py  html.py  json.py
tests/: conftest.py  test_async.py  test_decorators.py  test_explain.py  test_explain_postgres.py  test_profiler.py
tests/renderers/: conftest.py  test_console.py  test_html.py  test_json.py
